# PufferDrive

./: .clang-format  .clang-format-ignore  .dockerignore  .gitignore  .gitmodules  .ninja_log  .pre-commit-config.yaml  404.html  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN.md.backup  ObservationAnalysis.txt  README.md  README_DIPLOMACY_STATUS.md  SUPPORT_IMPLEMENTATION_COMPLETE.md  aggregate_results.py  build.dockerfile  data.html  evaluation.html  gcp.dockerfile  getting-started.html  index.html  interact-with-agents.html  launch.dockerfile  mkdocs.yml  prepare_data.py  print.html  profile_net.py  pufferdrive-2.0.html  requirements-dev.txt  scene-editor.html  searcher-c2a407aa.js  searchindex-3d8ae7b6.js  searchindex-436a8e6b.js  searchindex-c1681e47.js  searchindex-da507344.js  searchindex-f0d43f57.js  setup.py  simulator.html  split_validation_data.py  submit_all_shards.sh  (+16 more)
automation/: gcp_run_job.py  gcs_sync.py  run_training.sh
benchmark-readme/: index.html
co_player_policies/: puffer_drive_tqq99nv9.pt
data/: index.html
diplomacy/: __init__.py
docs/: ADJUDICATION_STATUS.md  CURRENT_STATUS_SUMMARY.md  PLAN.md  PROGRESS_REPORT.md  STATUS.md  benchmark-readme.md  book.toml  data.md  evaluation.md  getting-started.md  index.md  interact-with-agents.md  pufferdrive-2.0.md  scene-editor.md  simulator.md  train.md  visualizer.md  womd-editor.md  wosac.md
evaluation/: index.html
getting-started/: index.html
greene/: a100_baseline_sweep.sh  h100_gsp_rew_sweep.sh  (+1 more)
tests/ini_parser/: CMakeLists.txt  build_n_test.sh  ini_tester.c  test_drive.ini
(+1363 files in other folders)
